cmake_minimum_required(VERSION 3.9)
project(Extra.Clase.2.datos)

set(CMAKE_CXX_STANDARD 11)
find_package(Qt5Widgets)
include_directories(${Qt5Widgets_INCLUDE_DIRS})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
qt5_generate_moc(main.cpp main.moc)
add_executable(Extra.Clase.2.datos main.cpp Json_Factory.cpp Json_Factory.h SingleTon.cpp SingleTon.h FacadeRAM.cpp FacadeRAM.h)
target_link_libraries(Extra.Clase.2.datos Qt5::Widgets)